<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Final App</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login_title">Login</string>
    <string name="principal_title">Principal</string>
    <string name="principal_subtitle">welcome</string>
    <string name="forgotpassword_title">Forgot Password</string>
    <string name="username_lbl">USERNAME</string>
    <string name="username_typelbl">Type username here...</string>
    <string name="password_lbl">PASSWORD</string>
    <string name="password_typelbl">Type password here...</string>
    <string name="login_lbl">login</string>
    <string name="forgot_passw_lbl">forgot password</string>
    <string name="btn_login_lbl">login</string>
    <string name="btn_forgotpsw_lbl">forgot</string>
    <string name="link_forgotpsw_lbl">forgot password</string>
    <string name="username_value">admin</string>
    <string name="password_value">12345</string>
    <string name="email_login_txt">(email)</string>
    <string name="email_lbl">EMAIL</string>
    <string name="email_typelbl">Type email here...</string>
    <string name="login_match_error">Error - No access</string>
    <string name="email_format_error">Error - Incorrect EMail Format</string>
    <string name="menu_draw_opc1">List View</string>
    <string name="menu_draw_opc2">Grid View</string>
    <string name="menu_draw_opc3">Both Views</string>
    <string name="gral_error_msg">Error</string>
    <string name="menu_navbar_opc1">Refresh</string>
    <string name="menu_navbar_opc2">About</string>
    <string name="menu_navbar_opc3">Replace</string>
    <string name="menu_navbar_opc4">Add</string>
    <string name="menu_navbar_opc5">Exit</string>
    <string name="title_activity_about">About</string>
    <string name="about_head">About Final App</string>

</resources>
